background image fix

--- a/style/style.less
+++ b/style/style.less
@@ -1,9 +1,14 @@
 
-body{
+html{
     background-image: url('../images/welcome.jpg');
-    background-position: 0 0;
-    background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
     background-repeat: none;
+}
+body{
+    background-color: rgba(0,0,0,0);
 }
 .animated {
   -webkit-animation-duration: 1s;
