--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,13 @@
-body {
+html {
   background-image: url('../images/welcome.jpg');
-  background-position: 0 0;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   background-repeat: none;
+}
+body {
+  background-color: rgba(0, 0, 0, 0);
 }
 .animated {
   -webkit-animation-duration: 1s;
@@ -77,7 +82,6 @@ body {
 footer {
   background-color: rgba(0, 0, 0, 0.33);
   border-top: 2px solid rgba(0, 0, 0, 0.1);
-  height: 3.3em;
   position: fixed;
   bottom: 0px;
   width: 100%;
