--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,16 @@ html {
 body {
   background-color: rgba(0, 0, 0, 0);
 }
+.split3 {
+  margin-bottom: 5.8em;
+}
+.split3 h1,
+.split3 h2,
+.split3 h3 {
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
@@ -64,20 +74,35 @@ body {
 .welcome h1 {
   font-size: 3.3em;
 }
-.welcome p {
+.welcome p,
+.split3 p,
+ul li,
+.introt {
   text-align: left;
   font-size: 1.5em;
-  max-width: 960px;
-  padding: 1em;
+  padding: 1em 1em 0 1em;
   color: rgba(255, 255, 255, 0.8);
 }
 .welcome p span.important,
-.welcome p a {
+.split3 p span.important,
+ul li span.important,
+.introt span.important,
+.welcome p a,
+.split3 p a,
+ul li a,
+.introt a {
   color: #ffffff;
   font-weight: bold;
 }
-.welcome p a {
+.welcome p a,
+.split3 p a,
+ul li a,
+.introt a {
   text-decoration: underline;
+}
+p.introt {
+  width: 100%;
+  text-align: center;
 }
 footer {
   background-color: rgba(0, 0, 0, 0.33);
@@ -91,4 +116,15 @@ footer a {
   color: #fff;
   padding: 0 0.33em;
   font-size: 2.5em;
+}
+.row-centered {
+  text-align: center;
+}
+.col-centered {
+  display: inline-block;
+  float: none;
+  /* reset the text-align */
+  text-align: center;
+  /* inline-block space fix */
+  margin-right: -4px;
 }
