--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,12 @@ html {
   background-size: cover;
   background-repeat: none;
 }
+
+canvas #spiders{
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 body {
   background-color: rgba(0, 0, 0, 0);
 }
